--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,12 +8,12 @@ http {
 		#config SSL and TLS
 		listen 443 ssl;
 		ssl_protocols TLSv1.2 TLSv1.3;
-		ssl_certificate /etc/nginx/ssl/inception.crt;
-		ssl_certificate_key /etc/nginx/ssl/inception.key;
+		ssl_certificate /etc/nginx/ssl/jhurpy.42.fr.crt;
+		ssl_certificate_key /etc/nginx/ssl/jhurpy.42.fr.key;
 
 		#config Root and index and server_name
 		root /var/www/html;
-		server_name localhost;
+		server_name localhost; #change to your domain name jhurpy.42.fr
 		index index.php index.html index.htm;
 
 		location / {
