--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,5 +1,4 @@
 events {
-
 }
 
 http {
@@ -13,7 +12,7 @@ http {
 
 		#config Root and index and server_name
 		root /var/www/html;
-		server_name localhost; #change to your domain name jhurpy.42.fr
+		server_name localhost; #change localhost to jhurpy.42.fr our domain name
 		index index.php index.html index.htm;
 
 		location / {
@@ -22,9 +21,7 @@ http {
 
 		location ~ \.php$ {
 			include snippets/fastcgi-php.conf;
-			fastcgi_pass wordpress:9000;
-
+			#fastcgi_pass wordpress:9000;
 		}
-
 	}
 }
