[ADD] location for PHP cgi and logs for server access

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,7 +1,10 @@
 events {
+
 }
 
 http {
+	include /etc/nginx/mime.types;
+	default_type application/octet-stream;
 
 	server {
 		#config SSL and TLS
@@ -12,16 +15,29 @@ http {
 
 		#config Root and index and server_name
 		root /var/www/html;
-		server_name localhost; #change localhost to jhurpy.42.fr our domain name
+		server_name jhurpy.42.fr www.jhurpy.42.fr;
 		index index.php index.html index.htm;
 
 		location / {
-			try_files $uri $uri/ =404;
+				try_files $uri $uri/ =404;
+
 		}
 
+		#config PHP and fastcgi
 		location ~ \.php$ {
-			include snippets/fastcgi-php.conf;
-			#fastcgi_pass wordpress:9000;
+			fastcgi_split_path_info ^(.+\.php)(/.+)$;
+			fastcgi_pass wordpress:9000;
+			fastcgi_index index.php;
+			include fastcgi_params;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_param PATH_INFO $fastcgi_path_info;
+			try_files $uri =404;
+
 		}
+
+		# config logs files for access server and error
+		access_log /var/log/nginx/access.log;
+		error_log /var/log/nginx/error.log;
+
 	}
 }
