--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -1,6 +1,7 @@
 [mysqld]
 datadir = /var/lib/mysql
-socket = /run/mysqld/mysqld.sock
-bind_address=*
+bind_address = *
 port = 3306
 user = mysql
+innodb_buffer_pool_size = 1G
+max_connections = 200
