--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -1,5 +1,6 @@
 [mysqld]
 datadir = /var/lib/mysql
+; socket = /run/mysqld/mysqld.sock Check if it is necessary
 bind_address = *
 port = 3306
 user = mysql
