--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,7 +4,6 @@ LABEL org.opencontainers.image.authors="Hotaruban"
 
 # update and upgrade the system
 RUN apt-get update && apt-get upgrade -y
-RUN rm -rf /var/lib/apt/lists/*
 
 # install nginx
 RUN apt-get install nginx -y
@@ -33,6 +32,10 @@ RUN openssl req -x509 -nodes -days 365\
 
 # copy our configuration file of nginx to the container
 COPY conf/nginx.conf /etc/nginx/nginx.conf
+
+# Clean the system and remove the cache
+RUN apt-get clean
+RUN rm -rf /var/lib/apt/lists/*
 
 # Expose the port 443 for information
 EXPOSE 443
