--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       context: ./requirements/mariadb
       dockerfile: Dockerfile
     volumes:
-      - mariadb_data:/var/lib/mysql
+      - mariadb:/var/lib/mysql
     restart: unless-stopped
     expose:
       - 3306
@@ -60,11 +60,11 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: /Users/$USER/data/mariadb
+      device: /home/$USER/data/mariadb
       o: bind
   wordpress:
     driver: local
     driver_opts:
       type: none
-      device: /Users/$USER/data/wordpress
+      device: /home/$USER/data/wordpress
       o: bind
