[FIX] folder for wordpress

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -15,7 +15,7 @@ http {
 
 		#config Root and index and server_name
 		root /var/www/html;
-		server_name jhurpy.42.fr www.jhurpy.42.fr 127.0.0.1;
+		server_name jhurpy.42.fr www.jhurpy.42.fr;
 		index index.php index.html index.htm;
 
 		location / {
