[FIX] add listen option

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -9,6 +9,7 @@ http {
 	server {
 		#config SSL and TLS
 		listen 443 ssl;
+		listen [::]:443 ssl;
 		ssl_protocols TLSv1.2 TLSv1.3;
 		ssl_certificate /etc/nginx/ssl/jhurpy.42.fr.crt;
 		ssl_certificate_key /etc/nginx/ssl/jhurpy.42.fr.key;
