[FIX] change password users

--- a/srcs/.env
+++ b/srcs/.env
@@ -2,16 +2,16 @@
 
 # mysql
 MYSQL_USER=user
-MYSQL_PASSWORD=42@user
-MYSQL_ROOT_PASSWORD=42@root
+MYSQL_PASSWORD=42user
+MYSQL_ROOT_PASSWORD=42root
 MYSQL_DATABASE=wordpress
 
 # wordpress
 WORDPRESS_URL=jhurpy.42.fr
 WORDPRESS_TITLE=Inception
 WORDPRESS_ADMIN_USER=hotaru
-WORDPRESS_ADMIN_PASSWORD=42@hotaru
+WORDPRESS_ADMIN_PASSWORD=42hotaru
 WORDPRESS_ADMIN_EMAIL=hotaru@42bkk.fr
 WORDPRESS_USER=userone
 WORDPRESS_USER_EMAIL=useronepass
-WORDPRESS_USER_PASSWORD=userone@42bkk.fr
+WORDPRESS_USER_PASSWORD=userone42bkk
