[FIX] setup for wp

--- a/srcs/.env
+++ b/srcs/.env
@@ -5,6 +5,7 @@ MYSQL_USER=user
 MYSQL_PASSWORD=42user
 MYSQL_ROOT_PASSWORD=42root
 MYSQL_DATABASE=wordpress
+MYSQL_HOSTNAME=mariadb
 
 # wordpress
 WORDPRESS_URL=jhurpy.42.fr
