[FIX] remove socket and change script

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -26,9 +26,9 @@ RUN chmod +x /usr/local/bin/database.sh
 RUN /usr/local/bin/database.sh
 
 # Create directory with correct permissions and ownership for socket
-RUN mkdir -p /var/run/mysqld
-RUN chown -R mysql:mysql /var/run/mysqld
-RUN chmod 777 /var/run/mysqld
+#RUN mkdir -p /var/run/mysqld
+#RUN chown -R mysql:mysql /var/run/mysqld
+#RUN chmod 777 /var/run/mysqld
 
 # Define the volumes
 VOLUME /var/lib/mysql
