--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -1,7 +1,11 @@
-[mysqld]
+[mariadb]
 datadir = /var/lib/mysql
+socket = /run/mysqld/mysqld.sock
 bind_address = *
 port = 3306
 user = mysql
-innodb_buffer_pool_size = 1G
-max_connections = 200
+
+character-set-server = utf8mb4
+collation-server = utf8mb4_general_ci
+pid-file = /run/mysqld/mysqld.pid
+basedir = /usr
