[ADD] test and good email

--- a/srcs/.env
+++ b/srcs/.env
@@ -14,5 +14,5 @@ WORDPRESS_ADMIN_USER=hotaru
 WORDPRESS_ADMIN_PASSWORD=42hotaru
 WORDPRESS_ADMIN_EMAIL=hotaru@42bkk.fr
 WORDPRESS_USER=userone
-WORDPRESS_USER_EMAIL=useronepass
+WORDPRESS_USER_EMAIL=userone@pass.fr
 WORDPRESS_USER_PASSWORD=userone42bkk
