--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -33,20 +33,24 @@ VOLUME /var/lib/mysql
 # Expose the port 3306 for information
 EXPOSE 3306
 
-# Copy and set up the initialization script
-COPY ./tools/database.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/database.sh
 
 # Use an entrypoint script to initialize the database and start MariaDB
 #COPY ./tools/docker-entrypoint.sh /usr/local/bin/
 #RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
-#COPY ./tools/database.sh /docker-entrypoint-initdb.d/
-#RUN chmod +x /docker-entrypoint-initdb.d/database.sh
 
 # Execute the script
-RUN /usr/local/bin/database.sh
+#RUN /usr/local/bin/database.sh
 #ENTRYPOINT ["/docker-entrypoint-initdb.d/database.sh"]
 
+# Copy and set up the initialization script
+#COPY ./tools/database.sh /usr/local/bin/
+#RUN chmod +x /usr/local/bin/database.sh
+
+COPY ./tools/database.sh /docker-entrypoint-initdb.d/
+RUN chmod +x /docker-entrypoint-initdb.d/database.sh
+
 # Start the service
-CMD ["mysqld", "--user=mysql", "--console"]
+ENTRYPOINT ["mysqld"]
+
+#CMD ["/usr/local/bin/database.sh"]
