--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -46,7 +46,7 @@ EXPOSE 3306
 # Copy and set up the initialization script
 COPY ./tools/database.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/database.sh
-RUN /usr/local/bin/database.sh
+#RUN /usr/local/bin/database.sh
 
 #COPY ./tools/database.sh /docker-entrypoint-initdb.d/
 #RUN chmod +x /docker-entrypoint-initdb.d/database.sh
