[FIX] test old Dockerfile

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,10 +4,10 @@ FROM debian:bookworm
 LABEL org.opencontainers.image.authors="Hotaruban"
 
 # Set the arguments
-ENV MYSQL_USER=$(MYSQL_USER)
-ENV MYSQL_PASSWORD=$(MYSQL_PASSWORD)
-ENV MYSQL_ROOT_PASSWORD=$(MYSQL_ROOT_PASSWORD)
-ENV MYSQL_DATABASE=$(MYSQL_DATABASE)
+ARG MYSQL_USER
+ARG MYSQL_PASSWORD
+ARG MYSQL_ROOT_PASSWORD
+ARG MYSQL_DATABASE
 
 # Set the user to root to install the packages
 USER root
@@ -26,7 +26,7 @@ COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 RUN mkdir -p /var/run/mysqld && \
 	chown -R mysql:mysql /var/run/mysqld && \
 	chmod 777 /var/run/mysqld
-	
+
 COPY ./tools/database.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/database.sh
 
