[REF] remove useless code and comment, and add good comment, remove infinte loop for init-db.sh

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -27,16 +27,11 @@ RUN mkdir -p /var/run/mysqld && \
 	chown -R mysql:mysql /var/run/mysqld && \
 	chmod 777 /var/run/mysqld
 
-COPY ./tools/database.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/database.sh
-#RUN /usr/local/bin/database.sh
-
-#COPY ./tools/database.sh /root/tools/
-#RUN chmod +x /root/tools/database.sh
-#RUN /root/tools/database.sh
-
-COPY ./tools/init-db.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/init-db.sh
+# Copy the script to the container and set the permissions
+COPY ./tools/database.sh /usr/local/bin/ && \
+		./tools/init-db.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/database.sh && \
+		chmod +x /usr/local/bin/init-db.sh
 
 # Define the volumes
 VOLUME /var/lib/mysql
@@ -44,9 +39,5 @@ VOLUME /var/lib/mysql
 # Expose the port 3306 for information
 EXPOSE 3306
 
+# Set the entrypoint
 ENTRYPOINT [ "/usr/local/bin/init-db.sh" ]
-
-# Start the service
-#CMD ["sh", "-c", "mysqld & sleep 10; /usr/local/bin/database.sh; wait"]
-#CMD ["sh", "-c", "mysqld & sleep 10; /root/tools/database.sh; wait"]
-#CMD ["mysqld"]
