--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -11,8 +11,10 @@ http {
 		listen 443 ssl;
 		listen [::]:443 ssl;
 		ssl_protocols TLSv1.2 TLSv1.3;
-		ssl_certificate /etc/nginx/ssl/jhurpy.42.fr.crt;
-		ssl_certificate_key /etc/nginx/ssl/jhurpy.42.fr.key;
+		#ssl_certificate /etc/nginx/ssl/jhurpy.42.fr.crt;
+		#ssl_certificate_key /etc/nginx/ssl/jhurpy.42.fr.key;
+		ssl_certificate /run/secrets/ssl_certificate;
+		ssl_certificate_key /run/secrets/ssl_certificate_key;
 
 		#config Root and index and server_name
 		root /var/www/html;
