--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -5,8 +5,9 @@ LABEL org.opencontainers.image.authors="Hotaruban"
 
 # update, upgrade and install nginx and openssl
 RUN apt-get update && apt-get upgrade -y &&\
-	apt-get install -y nginx openssl
-	
+	apt-get install -y nginx
+	#openssl
+
 # Clean the system and remove the cache
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
@@ -22,11 +23,11 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 		#/O=MyCompany : Organisation (Company)
 		#/OU=IT : Organisation unit (IT department)
 		#/CN=mycompany.com : Common Name (domain name)
-RUN mkdir -p /etc/nginx/ssl &&\
-	openssl req -x509 -nodes -days 365\
-	-out /etc/nginx/ssl/jhurpy.42.fr.crt\
-	-keyout /etc/nginx/ssl/jhurpy.42.fr.key\
-	-subj "/C=TH/ST=Bangkok/L=Bangkok/O=42BKK/OU=42/CN=jhurpy.42.fr"
+#RUN mkdir -p /etc/nginx/ssl &&\
+#	openssl req -x509 -nodes -days 365\
+#	-out /etc/nginx/ssl/jhurpy.42.fr.crt\
+#	-keyout /etc/nginx/ssl/jhurpy.42.fr.key\
+#	-subj "/C=TH/ST=Bangkok/L=Bangkok/O=42BKK/OU=42/CN=jhurpy.42.fr"
 
 # copy our configuration file of nginx to the container
 COPY conf/nginx.conf /etc/nginx/nginx.conf
