--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -6,6 +6,9 @@ services:
     container_name: mariadb
     env_file:
       - .env
+    environment:
+      - MYSQL_PASSWORD_FILE=/run/secrets/mysql_user_password
+      - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/mysql_root_password
     networks:
       - inception
     build:
@@ -13,6 +16,9 @@ services:
       dockerfile: Dockerfile
     volumes:
       - mariadb:/var/lib/mysql
+    secrets:
+      - mysql_root_password
+      - mysql_user_password
     restart: unless-stopped
     expose:
       - 3306
@@ -21,6 +27,10 @@ services:
     container_name: wordpress
     env_file:
       - .env
+    environment:
+      - WORDPRESS_ADMIN_PASSWORD_FILE=/run/secrets/wordpress_admin_password
+      - WORDPRESS_USER_PASSWORD_FILE=/run/secrets/wordpress_user_password
+      - MYSQL_PASSWORD_FILE=/run/secrets/mysql_user_password
     networks:
       - inception
     build:
@@ -28,6 +38,10 @@ services:
       dockerfile: Dockerfile
     volumes:
       - wordpress:/var/www/html
+    secrets:
+      - mysql_user_password
+      - wordpress_admin_password
+      - wordpress_user_password
     depends_on:
       - mariadb
     restart: always
@@ -77,3 +91,11 @@ secrets:
     file: ../secrets/ssl/nginx-selfsigned.crt
   ssl_certificate_key:
     file: ../secrets/ssl/nginx-selfsigned.key
+  mysql_root_password:
+    file: ../secrets/mysql-root-password.txt
+  mysql_user_password:
+    file: ../secrets/mysql-user-password.txt
+  wordpress_admin_password:
+    file: ../secrets/wordpress-admin-password.txt
+  wordpress_user_password:
+    file: ../secrets/wordpress-user-password.txt
