--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -30,6 +30,7 @@ services:
     environment:
       - WORDPRESS_ADMIN_PASSWORD_FILE=/run/secrets/wordpress_admin_password
       - WORDPRESS_USER_PASSWORD_FILE=/run/secrets/wordpress_user_password
+      - MYSQL_ROOT_PASSWORD_FILE=/run/secrets/mysql_root_password
       - MYSQL_PASSWORD_FILE=/run/secrets/mysql_user_password
     networks:
       - inception
@@ -40,6 +41,7 @@ services:
       - wordpress:/var/www/html
     secrets:
       - mysql_user_password
+      - mysql_root_password
       - wordpress_admin_password
       - wordpress_user_password
     depends_on:
