--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,10 +4,10 @@ FROM debian:bookworm
 LABEL org.opencontainers.image.authors="Hotaruban"
 
 # Set the arguments
-ARG MYSQL_USER
-ARG MYSQL_PASSWORD
-ARG MYSQL_ROOT_PASSWORD
-ARG MYSQL_DATABASE
+#ARG MYSQL_USER
+#ARG MYSQL_PASSWORD
+#ARG MYSQL_ROOT_PASSWORD
+#ARG MYSQL_DATABASE
 
 # Set the user to root to install the packages
 USER root
