[ADD] script to creat .env file and add password inside

--- a/srcs/.env
+++ b/srcs/.env
@@ -12,3 +12,5 @@ WORDPRESS_ADMIN_USER=hotaru
 WORDPRESS_ADMIN_EMAIL=hotaru@42bkk.fr
 WORDPRESS_USER=userone
 WORDPRESS_USER_EMAIL=userone@pass.fr
+
+# password
